       8808, ws-buglink:9390)
     * "Follow TCP Stream" shows only the first HTTP req+res. ([2]Bug
       9044)
     * Files with pcap-ng Simple Packet Blocks can't be read. ([3]Bug
       9200)

  New and Updated Features

   The following features are new (or have been significantly updated)
   since version 1.11.2:
     * Qt port:
          + The Capture Interfaces dialog has been added.
          + The Decode As dialog has been added.
          + Several SCTP dialogs have been added.
          + The statistics tree (the backend for many Statistics and
            Telephony menu items) dialog has been added.

   The following features are new (or have been significantly updated)
   since version 1.11.1:
     * Mac OS X packaging has been improved.

   The following features are new (or have been significantly updated)
   since version 1.11.0:
     * Dissector output may be encoded as UTF-8. This includes TShark
       output.
     * Qt port:
          + The Follow Stream dialog now supports packet and TCP stream
            selection.
          + A Flow Graph (sequence diagram) dialog has been added.
          + The main window now respects geometry preferences.

   The following features are new (or have been significantly updated)
   since version 1.10:
     * Wireshark now uses the Qt application framework. The new UI should
       provide a significantly better user experience, particularly on Mac
       OS X and Windows.
     * A more flexible, modular memory manger (wmem) has been added. It
       was available experimentally in 1.10 but is now mature and has
       mostly replaced the old API.
     * Expert info is now filterable and now requires a new API.
     * The Windows installer now uninstalls the previous version of
       Wireshark silently. You can still run the uninstaller manually
       beforehand if you wish to run it interactively.
     * The "Number" column shows related packets and protocol conversation
       spans (Qt only).